set(idls ${CMAKE_CURRENT_SOURCE_DIR}/stage_services.idl)

install(FILES ${idls} DESTINATION ${INC_INSTALL_DIR}/idl
    COMPONENT idl)

OPENRTM_COMPILE_IDL_FILES(${PROJECT_BINARY_DIR}/include/${PROJECT_NAME_LOWER}/idl
    ${idls})
set(IDL_ALL_SOURCES ${IDL_ALL_SOURCES} PARENT_SCOPE)
install(FILES ${IDL_ALL_HEADERS}
    DESTINATION ${INC_INSTALL_DIR}/${PROJECT_NAME_LOWER}/idl
    COMPONENT headers)

